--- a/nodejs-express-mongodb-bootcamp/1-node-farm/practice/pages/404_page.html
+++ b/nodejs-express-mongodb-bootcamp/1-node-farm/practice/pages/404_page.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Table Student</title>
+    <title>Page Index</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
     <div class="container d-flex justify-content-center min-vh-100 align-items-center">
-        <div class="card w-50">
-            <div class="card-header text-center">
-                <h5>From Student</h5>
+        <div class="card w-50 text-center " style="text-align: center;">
+            <div class="card-header">
+                <h5>Error Page</h5>
             </div>
             <div class="card-body">
-                <form action="">
-                    <div class="mb-3">
-                        <label class="form-label">Full Name</label>
-                        <input type="text" class="form-control">
-                    </div>
-                </form>
+                <p class="card-text">{%MSGERROR%}</p>
+                <a href="/" class="btn btn-danger">Back To Index</a>                
             </div>
         </div>
-        
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+
 </html>
